﻿                     wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.25 (Beta 3)
* Fixed FS#100 — "Problem with the relative path of XPM"

02-27-2007 Version 3.00.24 (Beta 3)
* Fixed FS#131 — "Folder not getting released after saving a project into it."
* Fixed FS#114 — "Not being able to cut non-top-level sizers and paste them as top-level sizers."
* Fixed FS#124 — "Option to create a sizer around a control does not work on top-level sizers."
* Fixed FS#104 — "Editing XRC/C++ files should be disallowed completely or allowed to affect GUI properties."
* Fixed FS#127 — "Change 'new' label to 'new project'."
* Fixed FS#125 — "Buggy cut/paste of panels from splitter window controls."
* Fixed FS#113 — "Error when undoing cutting controls."

02-26-2007 Version 3.00.23 (Beta 3)
+ Added wxGridBagSizer. This closes FS#58.
   Cannot use wxGBS as the first sizer in a form until the object model improves.
^ Spacer now uses sizeritem, instead of being standalone. 
   This forced a project version uprev to 1.6
^ Converted all wxLogDebug to Debug::Print so __WXFB_DEBUG__ is used to 
   determine whether or not to log.
^ Improved precompiled header support. 
  NOTE: You must now define WX_PRECOMP when compiling to use a precompiled header.

02-23-2007 Version 3.00.22 (Beta 3)
+ Added most of the higher level events for wxTopLevelWindows and wxWindow.
^ Updated the event layout and used event inhertitance to get common events
  throughout the controls.

02-22-2007 Version 3.00.21 (Beta 3)
+ Added the 'Additional' controls events.
* Prevent event handler duplication when there are different event handlers
  with the same function (but it doesn't check that the event class is the
  same).
* Fixed FS#98 - Non-existing files are removed from the recent files list.
+ Added wxEVT_UPDATE_UI event to all controls (if it has a sense). 

02-18-2007 Version 3.00.20 (Beta 3)