@@ -2,6 +2,8 @@
 ************************************************************************
 date Version 3.00.25 (Beta 3)
 * Fixed FS#100 — "Problem with the relative path of XPM"
+* Fixed FS#126 — "Splitter window control without a panel does not get redrawn correctly."
+* Fixed FS#132 — "Splitter window control moves its sash unexpectedly at design time."
 
 02-27-2007 Version 3.00.24 (Beta 3)
 * Fixed FS#131 — "Folder not getting released after saving a project into it."
